*compilation*
-*- mode: compilation; default-directory: "~/mimicrypt/" -*-
Compilation started at Mon Jul 11 09:30:37

gcc mimicrypt.c
mimicrypt.c: In function ‘rand_num’:
mimicrypt.c:75:60: error: request for member ‘num’ in something not a structure or union
   75 |             if((result<=255)&&(result>-1)&&(result!=data_e1.num)){
      |                                                            ^
mimicrypt.c:90:31: error: request for member ‘num’ in something not a structure or union
   90 |             if(result==data_e1.num){
      |                               ^
mimicrypt.c: In function ‘encrypt_operation’:
mimicrypt.c:107:14: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
  107 |       fscanf(archive_inp,"%c",&aux);
      |              ^~~~~~~~~~~
      |              |
      |              FILE **
In file included from mimicrypt.c:3:
/usr/include/stdio.h:391:37: note: expected ‘FILE * restrict’ but argument is of type ‘FILE **’
  391 | extern int fscanf (FILE *__restrict __stream,
      |                    ~~~~~~~~~~~~~~~~~^~~~~~~~
mimicrypt.c:126:15: warning: passing argument 1 of ‘fprintf’ from incompatible pointer type [-Wincompatible-pointer-types]
  126 |       fprintf(archive_otp,"%c",aux2);
      |               ^~~~~~~~~~~
      |               |
      |               FILE **
In file included from mimicrypt.c:3:
/usr/include/stdio.h:326:38: note: expected ‘FILE * restrict’ but argument is of type ‘FILE **’
  326 | extern int fprintf (FILE *__restrict __stream,
      |                     ~~~~~~~~~~~~~~~~~^~~~~~~~

Compilation exited abnormally with code 1 at Mon Jul 11 09:30:37
